@@ -76,6 +76,11 @@ public enum ConfigNodes {
             NWS_FORCE_EXPLOSIONS_ON("new_world_settings.force_explosions_on","false", "# force_explosions_on is a global flag and overrides any towns flag setting"),
             NWS_FORCE_TOWN_MONSTERS_ON("new_world_settings.force_town_monsters_on","false", "# force_town_monsters_on is a global flag and overrides any towns flag setting"),
             NWS_FORCE_FIRE_ON("new_world_settings.force_fire_on","false", "# force_fire_on is a global flag and overrides any towns flag setting"),
+            NWS_PLOT_MANAGEMENT("new_world_settings.plot_management","",
+            		"# World management settings to deal with un/claiming plots"),
+            NWS_PLOT_MANAGEMENT_ENABLE("new_world_settings.plot_management.enabled","true"),
+            NWS_PLOT_MANAGEMENT_DELETE("new_world_settings.plot_management.unclaim_delete","26,50,55,63,64,68,70,71,72,75,76,93,94", "# These items will be deleted upon a plot being unclaimed"),
+            		
             GTOWN_SETTINGS("global_town_settings","", "", "",
 								                      "############################################################",
 								                      "# +------------------------------------------------------+ #",
